# rusterine

./: .gitignore  Cargo.toml
segments/: index.seg
src/: journal.rs  main.rs  mmap.rs  page.rs  storage.rs
