[package]
name = "rusterine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2.172"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
unicode-segmentation = "1.12.0"
